# cloth-fit

./: CMakeLists.txt
.github/workflows/: continuous.yml  nif.yml
cloth_fit_cli/: .gitignore  Makefile  README.md  mix.exs
cloth_fit_cli/c_src/cloth_fit_cli/: polyfem.cpp
cloth_fit_cli/lib/: polyfem.ex
cloth_fit_cli/lib/cloth_fit_cli/: application.ex  polyfem.ex
cloth_fit_cli/lib/cloth_fit_cli/cli/: runner.ex
cloth_fit_cli/lib/mix/tasks/: cloth_fit.build_native.ex
cmake/recipes/: spdlog.cmake
docs/decisions/: 20260712-retarget-polyfem-boundary-dlopen-bridge.md
json-specs/: input-spec.json
src/polyfem/: CMakeLists.txt  main.cpp
src/polyfem/garment/: CMakeLists.txt  optimize.cpp  run_retarget.cpp  run_retarget.hpp
src/polyfem/io/: CMakeLists.txt  USDPlugins.hpp  USDReader.cpp  USDReader.hpp  USDWriter.cpp  USDWriter.hpp
src/polyfem/solver/: ALSolver.hpp  CMakeLists.txt
src/polyfem/solver/forms/: CMakeLists.txt
src/retarget_bridge/: loader.cpp  stubgen_compat.h  weftfit_retarget.cpp  weftfit_retarget.h  weftfit_retarget.sigs  wfrt_loader.hpp
src/usd_bridge/: cloth_fit_usd.cpp  cloth_fit_usd.h  cloth_fit_usd.sigs  loader.cpp  loader.hpp  stubgen_compat.h
tests/: CMakeLists.txt  test_usd_io.cpp
